# txtstat

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: pages.yml
corpa-python/: Cargo.toml  corpa.pyi  pyproject.toml
corpa-python/src/: lib.rs
corpa-wasm/: Cargo.toml  index.d.ts  package.json
corpa-wasm/src/: lib.rs
docs/: index.html
docs/plans/: 2026-03-03-fix-all-bugs.md
lexis-python/: Cargo.toml  pyproject.toml
lexis-python/src/: lib.rs
lexis-wasm/: Cargo.toml  package.json
lexis-wasm/src/: lib.rs
src/: cli.rs  input.rs  lib.rs  main.rs  output.rs  results.rs  streaming.rs
src/analysis/: bpe.rs  counter.rs  detect.rs  entropy.rs  mod.rs  ngram.rs  tokenizer.rs
src/commands/: lang.rs  mod.rs  tokens.rs
tests/: cli_test.rs  counter_test.rs  entropy_test.rs  lm_test.rs  ngram_test.rs  readability_test.rs  results_test.rs  stopwords_test.rs  streaming_test.rs  tokenizer_test.rs
tests/fixtures/: french.txt  repetitive.txt
txtstat-python/: Cargo.toml  pyproject.toml
txtstat-python/src/: lib.rs
txtstat-wasm/: Cargo.toml
txtstat-wasm/src/: lib.rs
