[workspace]
members = [".", "corpa-python", "corpa-wasm"]

[package]
name = "corpa"
version = "0.6.0"
edition = "2021"
description = "The ripgrep of text analysis. Blazing-fast CLI for corpus-level NLP statistics."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Flurry13/corpa"
homepage = "https://flurry13.github.io/corpa"
readme = "README.md"
keywords = ["nlp", "text-analysis", "cli", "corpus", "linguistics"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    ".worktrees/",
    ".github/",
    "corpa-python/",
    "corpa-wasm/",
    "docs/",
    "tasks/",
    "tests/fixtures/",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
comfy-table = { version = "7", optional = true }
memmap2 = { version = "0", optional = true }
rustc-hash = "2"
anyhow = "1"
rayon = { version = "1", optional = true }
whatlang = "0.16"
tiktoken-rs = { version = "0.6", optional = true }

[features]
default = ["native"]
native = ["memmap2", "rayon", "tiktoken-rs", "comfy-table"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
